test/replaceIndexOutOfBounds1.slq
// args: --run

def main() {
	x := vector(3, 0:!B);
	b:=false;
	if b{
		x[3] := H(x[3]); // error
	}
	return x:!ğ”¹^3;
}
